# aht10

./: .gitignore  CMakeLists.txt
include/: aht10.h
src/: aht10.c
tests/: aht10_test.cpp
